# datetime

./: .travis.yml  Cargo.toml  README.md
datetime-macros/: Cargo.toml
datetime-macros/src/: lib.rs
examples/: now.rs
src/: duration.rs  format.rs  instant.rs  lib.rs  local.rs  now.rs  parse.rs  system.rs  util.rs  zoned.rs
src/cal/: convenience.rs  datetime.rs  format.rs  iter.rs  mod.rs  offset.rs  parse.rs  zone.rs  zonefinder.rs
src/cal/fmt/: custom.rs  iso.rs  mod.rs
src/zoned/: mod.rs  offset.rs  zoned.rs  zoneinfo.rs
tests/: cal_arithmetic.rs  cal_iter.rs  date_to_yd.rs  datetime_to_instant.rs  duration.rs  examples.json  generate_tests.rb  instant.rs  instant_to_datetime.rs  iso_formats.rs  leap_years.rs  parsing.rs  simple_arithmetic.rs  tests.rs  time_zones.rs  yd_to_date.rs  ymd_to_date.rs
