[package]
name = "datetime"
description = "Library for date and time formatting and arithmetic"

authors = [ "Benjamin Sago <ogham@bsago.me>", "Hendrik Sollich <hendrik@hoodie.de>" ]
documentation = "https://docs.rs/datetime"
exclude = ["/README.md", "/LICENCE", "/.rustfmt.toml", "/.travis.yml"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-datetime/datetime"
version = "0.5.0"

[lib]
name = "datetime"

[dependencies]
locale = "0.2"
num-traits = "0.2"
pad = "0.1"
libc = "0.2"
iso8601 = "0.3.0"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["sysinfoapi", "minwindef"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1.29"


[dev-dependencies]
rustc-serialize = "0.3"
